--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Run Django unit tests
+      - name: Install Django
         run: 
           pip install --user django
+      - name: Run Django unit tests
+        run: 
+          python manage.py test
+        
