--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,4 +9,4 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install Django
         run: 
-          pip install --user django
+          pip install django
