--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,6 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install Django
         run: 
-          pip install django
+          pip install django==3.0.8
       - name: test
         run: python manage.py test
